# baseline

./: .gitignore  Makefile  rebar.config  rebar3.config
apps/baseline_drv_sample/: rebar3.config
apps/baseline_nif_sample/: CMakeLists.txt
apps/baseline_nif_sample/c_src/: baseline_nif.c  baseline_nif.h  baseline_nif_sample.c
apps/baseline_nif_sample/cmake/Modules/: FindErlInterface.cmake
apps/baseline_nif_sample/src/: baseline_nif_sample.app.src  baseline_nif_sample.erl
apps/baseline_nif_sample/test/: baseline_nif_sample_SUITE.erl
apps/baseline_nif_sample/test/conf/: all.cover
c_src/: baseline_drv.c  baseline_drv.h
escript/: x1.escript  x2.escript
examples/conf/: n1.config  n2.config  n3.config  n4.config  n5.config  n6.config  n7.config
files/: n1.config  n2.config
files/ct/: cover.config
include/: baseline.hrl
priv/conf/: n1.config  n2.config
priv/ct/: cover.config  ct.cover  default.spec
priv/escript/: cross_cover_analyse.escript  x1.escript  x2.escript
src/: baseline.app.src  baseline.erl  baseline_app.erl  baseline_binary.erl  baseline_ct.erl  baseline_drv.erl  baseline_drv_port.erl  baseline_ets.erl  baseline_fsm.erl  baseline_lists.erl  baseline_port.erl  baseline_proclib.erl  baseline_server.erl  baseline_socket.erl  baseline_statem.erl  baseline_sup.erl  internal.hrl
sub_dirs/baseline_nif/: Makefile  (+1 more)
test/: baseline_SUITE.erl  baseline_app_SUITE.erl  baseline_binary_SUITE.erl  baseline_drv_SUITE.erl  baseline_drv_port_SUITE.erl  baseline_ets_SUITE.erl  baseline_lists_SUITE.erl  baseline_sample_SUITE.erl  baseline_sup_SUITE.erl
(+42 files in other folders)
